# NaturalLanguageAlphabets

./: .buildbot-devel  .gitmodules  .travis.yml  NaturalLanguageAlphabets.cabal  README.md  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  shell.nix  stack.yaml
NLP/Alphabet/: IMMC.hs  MultiChar.hs
NLP/Alphabet/IMMC/: Internal.hs
NLP/Scoring/: SimpleUnigram.hs  Unigram.hs
NLP/Scoring/SimpleUnigram/: Default.hs  Import.hs
NLP/Scoring/Unigram/: Default.hs  Import.hs
scoring/: simpleunigram.score  simpleunigram.txt  unigramdefault.score  unigramnancy.score
src/: Benchmark.hs
tests/: Benchmark.hs  properties.hs  uni01.score  uni02.score
