name:           NaturalLanguageAlphabets
version:        0.0.0.2
author:         Christian Hoener zu Siederdissen
maintainer:     choener@tbi.univie.ac.at
homepage:       http://www.tbi.univie.ac.at/~choener/
copyright:      Christian Hoener zu Siederdissen, 2014
category:       Natural Language Processing
synopsis:       Alphabet and word representations
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.6.0
description:
                Provides different encoding for characters and words in natural
                language processing. A character will often be encoded as a
                bytestring as we deal with multi-symbol characters.
                .
                A very simple unigram-based scoring scheme is also provided.



extra-source-files:
  changelog
  scoring/simpleunigram.txt

library
  build-depends:
    base                  >3 && <5  ,
    attoparsec            >= 0.10   ,
    bytestring            >= 0.10.4 ,
    deepseq               >= 1.3    ,
    file-embed            >= 0.0.6  ,
    hashable              >= 1.2    ,
    hashtables            >= 1.1    ,
    intern                >= 0.9    ,
    stringable            >= 0.1.2  ,
    system-filepath       >= 0.4.9  ,
    text                  >= 0.11   ,
    unordered-containers  >= 0.2.3

  exposed-modules:
    NLP.Alphabet.MultiChar
    NLP.Scoring.SimpleUnigram
    NLP.Scoring.SimpleUnigram.Default
    NLP.Scoring.SimpleUnigram.Import

  ghc-options:

source-repository head
  type: git
  location: git://github.com/choener/NaturalLanguageAlphabets

