name:           NaturalLanguageAlphabets
version:        0.0.1.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       http://www.bioinf.uni-leipzig.de/~choener/
copyright:      Christian Hoener zu Siederdissen, 2014-2015
category:       Natural Language Processing
synopsis:       Alphabet and word representations
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
description:
                Provides different encoding for characters and words in natural
                language processing. A character will often be encoded as a
                bytestring as we deal with multi-symbol characters.
                .
                A very simple unigram-based scoring scheme is also provided.



extra-source-files:
  changelog
  scoring/simpleunigram.txt

library
  build-depends: base                  >  4.7     && < 4.9
               , attoparsec            >= 0.10    && < 0.13
               , bytestring            >= 0.10.4
               , deepseq               >= 1.3     && < 1.5
               , file-embed            >= 0.0.6   && < 0.0.9
               , hashable              >= 1.2     && < 1.3
               , hashtables            >= 1.1     && < 1.3
               , intern                >= 0.9     && < 0.10
               , stringable            >= 0.1.2   && < 0.2
               , system-filepath       >= 0.4.9   && < 0.5
               , text                  >= 0.11    && < 1.3
               , unordered-containers  >= 0.2.3   && < 0.3

  exposed-modules:
    NLP.Alphabet.MultiChar
    NLP.Scoring.SimpleUnigram
    NLP.Scoring.SimpleUnigram.Default
    NLP.Scoring.SimpleUnigram.Import

  default-language:
    Haskell2010

  default-extensions: BangPatterns
                    , GeneralizedNewtypeDeriving
                    , DeriveGeneric
                    , OverloadedStrings
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeFamilies

  ghc-options:
    -O2 -funbox-strict-fields

source-repository head
  type: git
  location: git://github.com/choener/NaturalLanguageAlphabets

