name:           NaturalLanguageAlphabets
version:        0.1.1.0
author:         Christian Hoener zu Siederdissen
maintainer:     choener@bioinf.uni-leipzig.de
homepage:       https://github.com/choener/NaturalLanguageAlphabets
bug-reports:    https://github.com/choener/NaturalLanguageAlphabets/issues
copyright:      Christian Hoener zu Siederdissen, 2014-2015
category:       Natural Language Processing
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.2
synopsis:       Simple scoring schemes for word alignments
description:
                Provides a simple scoring scheme for word alignments.



extra-source-files:
  README.md
  changelog.md
  scoring/simpleunigram.score



library
  build-depends: base                   >  4.7      &&  < 5.0
               , aeson                  >= 0.8      &&  < 0.12
               , attoparsec             >= 0.10     &&  < 0.14
               , file-embed             >= 0.0.6    &&  < 0.1
               , text                   >= 0.11     &&  < 1.3
               , unordered-containers   >= 0.2.3    &&  < 0.3
               --
               , LinguisticsTypes       == 0.0.0.*

  exposed-modules:
    NLP.Scoring.SimpleUnigram
    NLP.Scoring.SimpleUnigram.Default
    NLP.Scoring.SimpleUnigram.Import

  default-language:
    Haskell2010

  default-extensions: BangPatterns
                    , DeriveGeneric
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , OverloadedStrings
                    , RecordWildCards
                    , TemplateHaskell
                    , TypeFamilies

  ghc-options:
    -O2 -funbox-strict-fields



benchmark BenchmarkNLA
  build-depends: base
               , containers
               , criterion                >= 1.0.2  &&  < 1.2
               , deepseq
               , hashtables
               , LinguisticsTypes
               , mwc-random               >= 0.13   &&  < 0.14
               , NaturalLanguageAlphabets
               , random                   >= 1.0    &&  < 1.2
               , unordered-containers
               , vector
  hs-source-dirs:
    tests
  main-is:
    Benchmark.hs
  type:
    exitcode-stdio-1.0
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , ScopedTypeVariables
  ghc-options:
    -O2
    -rtsopts
    -funbox-strict-fields
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: ScopedTypeVariables
                    , TemplateHaskell
  build-depends: base
               , aeson
               , binary
               , cereal
               , LinguisticsTypes
               , NaturalLanguageAlphabets
               , QuickCheck
               , tasty                        >= 0.11
               , tasty-quickcheck             >= 0.8
               , tasty-th                     >= 0.1
               , text
               , unordered-containers



source-repository head
  type: git
  location: git://github.com/choener/NaturalLanguageAlphabets

